--- a/src/app/components/places/places.component.html
+++ b/src/app/components/places/places.component.html
@@ -6,6 +6,28 @@
   </div>
 </section>
 
+<!-- Location Filter -->
+<div class="container mt-4">
+  <div class="row">
+    <div class="col-md-4">
+      <div class="location-filter">
+        <label for="locationSelect">Filter by Location:</label>
+        <select id="locationSelect" class="form-select" [(ngModel)]="selectedLocation" (change)="onLocationChange()">
+          <option value="">All Locations</option>
+          <option *ngFor="let location of locations" [value]="location">{{location}}</option>
+        </select>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Loading Spinner -->
+<div class="container text-center mt-4" *ngIf="isLoading">
+  <div class="spinner-border text-primary" role="status">
+    <span class="visually-hidden">Loading...</span>
+  </div>
+</div>
+
 <!-- Places Grid -->
 <div class="container mt-5">
   <div class="row">
