Forget password done

--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -46,7 +46,7 @@
           <input type="checkbox" />
           <span>Remember me</span>
         </label>
-        <a href="#" class="auth-forgot-password">Forgot Password?</a>
+        <a routerLink="/auth/forget-password" class="auth-forgot-password">Forgot Password?</a>
       </div>
 
       <div class="error-message" *ngIf="error">{{ error }}</div>
