--- a/src/app/components/auth/shared/header/header.component.html
+++ b/src/app/components/auth/shared/header/header.component.html
@@ -5,7 +5,7 @@
       <li><a routerLink="/">Home</a></li>
       <li><a (click)="navigateToPlaces()" style="cursor: pointer;">Hotels</a></li>
       <li><a (click)="navigateToTourPackages()" style="cursor: pointer;">Tour Packages</a></li>
-      <li><a routerLink="/contact">Contact Us</a></li>
+      <li><a (click)="navigateToContact()" style="cursor: pointer;">Contact Us</a></li>
     </ul>
     <div class="auth-buttons">
       <ng-container *ngIf="!isLoggedIn">
