--- a/src/app/components/auth/shared/header/header.component.html
+++ b/src/app/components/auth/shared/header/header.component.html
@@ -2,7 +2,7 @@
   <nav>
     <div class="logo">Tourism Galle</div>
     <ul>
-      <li><a routerLink="/">Home</a></li>
+      <li><a routerLink="/auth/home">Home</a></li>
       <li><a (click)="navigateToPlaces()" style="cursor: pointer;">Hotels</a></li>
       <li><a (click)="navigateToTourPackages()" style="cursor: pointer;">Tour Packages</a></li>
       <li><a (click)="navigateToContact()" style="cursor: pointer;">Contact Us</a></li>
